--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,10 @@ $fs__heading--top: clamp(
 $fs__heading--bottom: clamp(2rem, 1.3553rem + 2.9474vw, 3.75rem); //32px - 60 px
 $fs__body: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem); //16-18px
 $txt-shadow: 4px 2px 4px rgba(166, 97, 97, 0.3);
+$txt-stroke--white: -1px 1px 0 #fff, 1px 1px 0 #fff, 1px -1px 0 #fff,
+  -1px -1px 0 #fff;
+$txt-stroke--main: -1px 1px 0 $color--main, 1px 1px 0 $color--main,
+  1px -1px 0 $color--main, -1px -1px 0 $color--main;
 
 // utility variables
 // images
@@ -28,7 +32,9 @@ $img-format: ".png";
 // padding
 $padding--S: 0.5rem;
 $padding--M: 1rem;
-
+$padding--L: 2rem;
+$padding--XL: 3rem;
+$padding--XXL: 6rem;
 
 // typography mixins
 @mixin body($fw, $case, $color) {
@@ -38,7 +44,6 @@ $padding--M: 1rem;
   text-transform: $case;
   color: $color;
 }
-
 
 @mixin heading($fs, $color) {
   font-family: $ff--montserrat;
@@ -50,9 +55,9 @@ $padding--M: 1rem;
 }
 
 @mixin flex($direction, $justify) {
-    display: flex;
-    flex-direction: $direction;
-    justify-content: $justify;
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
 }
 
 @mixin bg-cover($position) {
@@ -60,6 +65,9 @@ $padding--M: 1rem;
   background-repeat: no-repeat;
   background-position: $position;
 }
+
+/////////////////////////////////////////////////////////////
+// main styles
 
 #es-RC-container {
   font-family: $ff--montserrat;
@@ -109,11 +117,10 @@ $padding--M: 1rem;
         text-align: center;
       }
     }
-    
     &__right {
       background-image: url("#{$file-path}bg-hero-R#{$img-format}");
       @include bg-cover(right bottom);
-      @include flex (column, flex-end);
+      @include flex(column, flex-end);
       position: relative;
       min-height: 500px;
       &--headline {
@@ -130,45 +137,86 @@ $padding--M: 1rem;
       }
     }
     &__middle {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        max-width: fit-content;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        &--badge {
-            max-width: 80px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      max-width: fit-content;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      &--badge {
+        max-width: 80px;
+      }
+      &--packshot {
+        max-width: 270px;
+      }
+    }
+  }
+  .es-benefits {
+    padding: $padding--XL;
+    text-align: center;
+    &__header {
+      position: relative;
+      &--container {
+        border: 2px solid $color--main;
+        border-radius: 8px;
+        padding: $padding--L;
+        padding-bottom: $padding--XXL;
+      }
+      &--subtitle {
+        @include heading($fs__body, $color--main);
+        &--regular {
+          text-transform: unset;
         }
-        &--packshot {
-            max-width: 270px;
-        }
+      }
+    }
+    &__main {
+      background-color: white;
+      position: absolute;
+      left: 50%;
+    transform: translate(-50%, -30%);
+      &--title {
+        @include heading($fs__heading--top, $color--main);
+      }
+      & span {
+        display: block;
+        @include heading($fs__heading--bottom, white);
+        text-shadow: $txt-stroke--main;
+      }
     }
   }
 }
-
+////////////////////////////////////////////////////////////////////////
 // tablet styles
 @media screen and (min-width: 601px) {
-    #es-RC-container {
-        .es-hero {
-        @include flex(row, flex-end);
-        &__left {
-            flex-basis: 35%;
-            &--subtitle {
-                padding-right: 7rem;
-            }
+  #es-RC-container {
+    .es-hero {
+      @include flex(row, flex-end);
+      &__left {
+        flex-basis: 35%;
+        &--subtitle {
+          padding-right: 7rem;
         }
-        &__right {
-            flex-basis: 65%;
-            &--headline {
-                top: unset;
-                bottom: 3rem;
-            }
+      }
+      &__right {
+        flex-basis: 65%;
+        &--headline {
+          top: unset;
+          bottom: 3rem;
         }
-        &__middle {
-            left: -130px;
-            align-items: flex-end;
-        }
+      }
+      &__middle {
+        left: -130px;
+        align-items: flex-end;
+      }
+    }
+    .es-benefits {
+        &__main {
+            transform: translate(-50%, -50%);
+            &--title {
+            width: 32ch;
+        } 
         }
     }
+  }
 }
