--- a/style.css
+++ b/style.css
@@ -137,6 +137,28 @@
   color: white;
   text-shadow: -1px 1px 0 #f08365, 1px 1px 0 #f08365, 1px -1px 0 #f08365, -1px -1px 0 #f08365;
 }
+#es-RC-container .es-benefits__icon-wrapper {
+  padding-block: 6rem;
+}
+#es-RC-container .es-benefits__icon-single {
+  padding: 1rem;
+}
+#es-RC-container .es-benefits__icon-single--title {
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  text-transform: uppercase;
+  color: #f08365;
+  margin-top: 2rem;
+}
+#es-RC-container .es-benefits__icon-single--descr {
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 400;
+  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  text-transform: unset;
+  color: black;
+}
+
 @media screen and (min-width: 601px) {
   #es-RC-container .es-hero {
     display: flex;
@@ -165,5 +187,14 @@
   }
   #es-RC-container .es-benefits__main--title {
     width: 32ch;
+  }
+  #es-RC-container .es-benefits__icon-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: unset;
+  }
+  #es-RC-container .es-benefits__icon-single--title {
+    height: 3.5rem;
   }
 }/*# sourceMappingURL=style.css.map */
