--- a/style.css
+++ b/style.css
@@ -158,6 +158,50 @@
   text-transform: unset;
   color: black;
 }
+#es-RC-container .es-how {
+  background-image: url("./img/bg-hair.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 400px;
+  position: relative;
+}
+#es-RC-container .es-how__wrapper {
+  position: absolute;
+  padding: 2rem;
+  max-width: 34ch;
+  right: 2rem;
+  bottom: 2rem;
+  text-align: center;
+}
+#es-RC-container .es-how__wrapper::before {
+  content: url("./img/arrow-left.png");
+  position: absolute;
+  left: -80px;
+  top: 80px;
+}
+#es-RC-container .es-how__title {
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: clamp(1.75rem, 1.4737rem + 1.2632vw, 2.5rem);
+  color: white;
+}
+#es-RC-container .es-how__title span {
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: clamp(2rem, 1.3553rem + 2.9474vw, 3.75rem);
+  color: #f09884;
+  text-shadow: -1px 1px 0 #fff, 1px 1px 0 #fff, 1px -1px 0 #fff, -1px -1px 0 #fff;
+}
+#es-RC-container .es-how__descr {
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 400;
+  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  text-transform: unset;
+  color: white;
+}
 
 @media screen and (min-width: 601px) {
   #es-RC-container .es-hero {
