--- a/style.css
+++ b/style.css
@@ -174,12 +174,6 @@
   bottom: 2rem;
   text-align: center;
 }
-#es-RC-container .es-how__wrapper::before {
-  content: url("./img/arrow-left.png");
-  position: absolute;
-  left: -80px;
-  top: 80px;
-}
 #es-RC-container .es-how__title {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
   font-weight: 700;
@@ -240,5 +234,11 @@
   }
   #es-RC-container .es-benefits__icon-single--title {
     height: 3.5rem;
+  }
+  .es-how__wrapper::before {
+    content: url("./img/arrow-left.png");
+    position: absolute;
+    left: -80px;
+    top: 80px;
   }
 }/*# sourceMappingURL=style.css.map */
