--- a/style.scss
+++ b/style.scss
@@ -213,12 +213,7 @@ $padding--XXL: 6rem;
       right: 2rem;
       bottom: 2rem;
       text-align: center;
-      &::before {
-        content: url("#{$file-path}arrow-left#{$img-format}");
-        position: absolute;
-        left: -80px;
-        top: 80px;
-      }
+      
     }
     &__title {
       @include heading($fs__heading--top, white);
@@ -270,6 +265,16 @@ $padding--XXL: 6rem;
         &__icon-single--title {
             height: 3.5rem;
         }
+    }
+  }
+  .es-how {
+    &__wrapper {
+      &::before {
+        content: url("#{$file-path}arrow-left#{$img-format}");
+        position: absolute;
+        left: -80px;
+        top: 80px;
+      }
     }
   }
 }
