--- a/style.css
+++ b/style.css
@@ -198,13 +198,14 @@
 }
 #es-RC-container .es-use {
   padding: 6rem 3rem;
+  text-align: center;
 }
 #es-RC-container .es-use__container {
   border: 2px solid #f08365;
   border-radius: 8px;
   padding: 2rem;
   padding-bottom: 6rem;
-  text-align: center;
+  position: relative;
 }
 #es-RC-container .es-use__title {
   font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
@@ -226,6 +227,24 @@
   font-size: clamp(2rem, 1.3553rem + 2.9474vw, 3.75rem);
   color: white;
   text-shadow: -1px 1px 0 #f08365, 1px 1px 0 #f08365, 1px -1px 0 #f08365, -1px -1px 0 #f08365;
+}
+#es-RC-container .es-use__wrapper {
+  margin-top: -60px;
+  -webkit-backdrop-filter: opacity(100%);
+          backdrop-filter: opacity(100%);
+}
+#es-RC-container .es-use__single {
+  padding: 1rem;
+}
+#es-RC-container .es-use__single--img {
+  margin-bottom: 0.5rem;
+}
+#es-RC-container .es-use__single--step {
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  text-transform: uppercase;
+  color: #f08365;
 }
 
 @media screen and (min-width: 601px) {
@@ -271,5 +290,10 @@
     position: absolute;
     left: -80px;
     top: 80px;
+  }
+  .es-use__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
   }
 }/*# sourceMappingURL=style.css.map */
