--- a/style.scss
+++ b/style.scss
@@ -262,6 +262,15 @@ $padding--XXL: 6rem;
     }
 
   }
+  .es-before-after {
+    background-image: url("#{$file-path}bg-before-after#{$img-format}");
+    @include bg-cover(center);
+    @include flex (row, space-between);
+    @include heading($fw--bold, white);
+    font-size: $fs__body;
+    padding: $padding--L;
+    min-height: 300px;
+  }
 }
 ////////////////////////////////////////////////////////////////////////
 // tablet styles
