--- a/style.css
+++ b/style.css
@@ -246,6 +246,23 @@
   text-transform: uppercase;
   color: #f08365;
 }
+#es-RC-container .es-before-after {
+  background-image: url("./img/bg-before-after.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-family: "Montserrat", "DejaVu Sans", "Verdana", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 700;
+  color: white;
+  font-size: clamp(1rem, 0.9539rem + 0.2105vw, 1.125rem);
+  padding: 2rem;
+  min-height: 300px;
+}
 
 @media screen and (min-width: 601px) {
   #es-RC-container .es-hero {
